# lib/units/api/controllers/devices.js
@@ -16,6 +16,7 @@ const uuid = require('uuid')
 const wire = require('../../../wire')
 const wireutil = require('../../../wire/util')
 const wirerouter = require('../../../wire/router')
+const adbutil = require('../../../util/adbutil')
 
 /* ------------------------------------ PRIVATE FUNCTIONS ------------------------------- */
 
@@ -292,6 +293,35 @@ function getDeviceBookings(req, res) {
   })
 }
 
+function reconnectDevice(req, res) {
+  const serial = req.swagger.params.serial.value
+  const parts = serial.split(':')
+  const host = parts[0]
+  const port = parts.length > 1 ? parseInt(parts[1], 10) : 5555
+
+  if (!host || isNaN(port)) {
+    apiutil.respond(res, 400, 'Bad Request', { message: 'Invalid serial format' })
+    return
+  }
+
+  const adb = adbutil({ adbHost: req.options.adbHost, adbPort: req.options.adbPort })
+
+  adb.client.connect(host, port)
+    .then(function() {
+      apiutil.respond(res, 200, 'Device reconnect initiated', {
+        serial: serial
+      , host: host
+      , port: port
+      })
+    })
+    .catch(function(err) {
+      log.error('Failed to reconnect device %s: %s', serial, err.message)
+      apiutil.respond(res, 500, 'Internal Server Error', {
+        message: err.message
+      })
+    })
+}
+
 function addOriginGroupDevices(req, res) {
   const serials = apiutil.getBodyParameter(req.body, 'serials')
   const fields = apiutil.getQueryParameter(req.swagger.params.fields)
@@ -549,6 +579,7 @@ module.exports = {
 , getDeviceBySerial: getDeviceBySerial
 , getDeviceGroups: getDeviceGroups
 , getDeviceBookings: getDeviceBookings
+, reconnectDevice: reconnectDevice
 , addOriginGroupDevice: addOriginGroupDevice
 , addOriginGroupDevices: addOriginGroupDevices
 , removeOriginGroupDevice: removeOriginGroupDevice
